auth-service/src/main/java/com/example/auth/web/error/InvalidCredentialsException.java
package com.example.auth.web.error;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException() { super("invalid_credentials"); }
}
